--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Github User</string>
+    <string name="followers">Followers</string>
+    <string name="following">Following</string>
 </resources>
