--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Github User</string>
     <string name="followers">Followers</string>
     <string name="following">Following</string>
+    <string name="close">Close</string>
+    <string name="share">Share</string>
 </resources>
